Show post's comment and add more comment for the post

--- a/src/containers/posts/comments/comments.component.html
+++ b/src/containers/posts/comments/comments.component.html
@@ -1,1 +1,39 @@
-<p>comments works!</p>
+<a routerLink="/posts" class="btn-go-back">
+  <svg class="bi bi-arrow-left-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+    xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd"
+      d="M7.854 4.646a.5.5 0 0 1 0 .708L5.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0z" />
+    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h6.5a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z" />
+  </svg>
+  Back</a>
+
+<div class="row" *ngIf="isLoaded; else loading">
+  <div class="col">
+    <h6>Post ID: {{post.id}}</h6>
+
+    <hr>
+    <div>
+      {{post.body}}
+    </div>
+    <hr>
+    <label for="">Comment</label>
+    <ul>
+      <li *ngFor="let comment of comments">
+        <span>{{comment.body}}</span>
+      </li>
+    </ul>
+    <hr>
+    <textarea name="comment" id="coment" cols="30" rows="3" [(ngModel)]="comment"
+    (change)="onCommentChange()"
+    ></textarea>
+    <button (click)="sendComment()" type="button">Send</button>
+  </div>
+
+</div>
+<ng-template #loading>
+  <div>Loading...</div>
+</ng-template>
+
+<div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+  {{errorMessage}}
+</div>
