--- a/src/containers/posts/posts.component.html
+++ b/src/containers/posts/posts.component.html
@@ -1,18 +1,48 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Body</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let post of posts; let i = index">
-      <td>{{i}}</td>
-      <td>{{post.body}}</td>
-      <td>
-        <a [routerLink]="[ post.id, 'comment']">See comment</a>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="col">
+  <div class="row">
+    <div class="col">
+      <h4 class="page-title"> <svg class="bi bi-list-check" width="1em" height="1em" viewBox="0 0 16 16"
+          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
+        </svg>
+        Posts
+      </h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col"></div>
+    <a routerLink="/posts/create" class="post__btn-create">
+      <svg class="bi bi-plus" width="1.2em" height="1.2em" viewBox="0 0 16 16" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
+        <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
+      </svg>
+      Create new post</a>
+  </div>
+  <div *ngIf="isLoading; else postsTable"></div>
+  <ng-template #postsTable>
+    <table class="table post__table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Body</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let post of posts; let i = index" (dblclick)="onRowClick(post)">
+          <td>
+            <a [routerLink]="[post.id,'update']">{{post.id}}</a>
+          </td>
+          <td>{{post.body}}</td>
+          <td>
+            <a [routerLink]="[ post.id, 'comment']">See comment</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </ng-template>
+
+</div>
