--- a/src/containers/posts/comments/comments.component.html
+++ b/src/containers/posts/comments/comments.component.html
@@ -1,50 +1,53 @@
-<div class="row">
-  <div class="col">
-    <h4 class="page-title"> <svg class="bi bi-list-check" width="1em" height="1em" viewBox="0 0 16 16"
-        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd"
-          d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
-      </svg>
-      Post ID: {{post.id}}' comments
-    </h4>
-  </div>
-</div>
-
-
-<div class="row ">
-  <div class="col">
-    <div class="alert alert-secondary post__body" role="alert">
-      {{post.body}}
-    </div>
-  </div>
-</div>
-<div class="row">
-
-  <div class="col" >
-    <ul class="post__comments" *ngIf="comments.length > 0; else emptyComment">
-      <li *ngFor="let comment of comments">
-        <span>{{comment.body}}</span>
-      </li>
-    </ul>
-
-    <ng-template #emptyComment>
-      <div class="empty-text">This post has no comment. Please leave a comment if possible</div>
-    </ng-template>
-  </div>
-  
-</div>
-
-<div class="row" *ngIf="isLoaded; else loading">
-  <div class="col">
-    <div class="card comment-form">
-      <label for="Leave a comment"></label>
-      <textarea name="comment" id="coment" cols="30" rows="2" [(ngModel)]="comment"
-        (change)="onCommentChange()"></textarea>
-      <button (click)="sendComment()" class="btn btn-primary btn-small" [disabled]="isSubmitting" type="button">Send</button>
+<div *ngIf="isLoaded; else loading">
+  <div class="row">
+    <div class="col">
+      <h4 class="page-title"> <svg class="bi bi-list-check" width="1em" height="1em" viewBox="0 0 16 16"
+          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
+        </svg>
+        Post {{post && post.id }}'s comments
+      </h4>
     </div>
   </div>
 
 
+  <div class="row ">
+    <div class="col">
+      <div class="alert alert-secondary post__body" role="alert">
+        {{post.body}}
+      </div>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="col">
+      <ul class="post__comments" *ngIf="comments.length > 0; else emptyComment">
+        <li *ngFor="let comment of comments">
+          <span>{{comment.body}}</span>
+        </li>
+      </ul>
+
+      <ng-template #emptyComment>
+        <div class="empty-text">This post has no comment. Please leave a comment if possible</div>
+      </ng-template>
+    </div>
+
+  </div>
+
+  <div class="row" *ngIf="isLoaded; else loading">
+    <div class="col">
+      <div class="card comment-form">
+        <label for="Leave a comment"></label>
+        <textarea name="comment" id="coment" cols="30" rows="2" [(ngModel)]="comment"
+          (change)="onCommentChange()"></textarea>
+        <button (click)="sendComment()" class="btn btn-primary btn-small" [disabled]="isSubmitting"
+          type="button">Send</button>
+      </div>
+    </div>
+
+
+  </div>
 </div>
 
 <a routerLink="/posts" class="btn-go-back">
@@ -54,7 +57,8 @@
       d="M7.854 4.646a.5.5 0 0 1 0 .708L5.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0z" />
     <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h6.5a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z" />
   </svg>
-  Back</a>
+  Back
+</a>
 
 <ng-template #loading>
   <div>Loading...</div>
